--- a/pacman.html
+++ b/pacman.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Pacman</h1>
     <div id="wrapper">
-      <canvas id="canvas" width="800" height="800"></canvas>
+      <canvas id="canvas" width="800" height="800" class="front"></canvas>
       <canvas id="msg" width="800" height="800"></canvas>
     </div>
     <script src="init.js"></script>
