add test canvas and colors

--- a/pacman.html
+++ b/pacman.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
   <head>
+    <link href="styles.css" rel="stylesheet"/>
     <title>
       I am Pacman
     </title>
   </head>
   <body>
-    <h1>Pacman</h1>
+<h1 id="heading">Pacman</h1>
+
     <div id="wrapper">
-      <canvas id="canvas" width="800" height="800" class="front"></canvas>
-      <canvas id="msg" width="800" height="800"></canvas>
+      <canvas id="canvas" width="300" height="200" class="front"></canvas>
+      <canvas id="msg" width="300" height="200"></canvas>
     </div>
+
     <script src="init.js"></script>
   </body>
 </html>
