start entity component system

--- a/pacman.html
+++ b/pacman.html
@@ -12,7 +12,14 @@
       <canvas id="canvas" width="300" height="200" class="front"></canvas>
       <canvas id="msg" width="300" height="200"></canvas>
     </div>
-
-    <script src="init.js"></script>
+    <script>
+      var PACMAN = {
+        Components:{}
+    };
+    </script>
+    <script src="scripts/components/appearance.js"></script>
+    <script src="scripts/components/position.js"></script>
+    <script src="scripts/entity.js"></script>
+    <script src="scripts/init.js"></script>
   </body>
 </html>
