--- a/pacman.html
+++ b/pacman.html
@@ -10,7 +10,7 @@
     <div id="wrapper">
       <canvas id="canvas" width="420" height="560" class="front"></canvas>
       <canvas id="grid" width="420" height="560" class="grid"></canvas>
-      <canvas id="msg" width="420" height="560"></canvas>
+      <canvas id="background" width="420" height="560"></canvas>
     </div>
     <script src="scripts/global.js"></script>
     <script src="scripts/debug.js"></script>
