--- a/pacman.html
+++ b/pacman.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h1 id="heading">Pacman</h1>
+    <div id="score">
+      <canvas id="canvasscore" width="420" height="40"></canvas>
+    </div>
     <div id="wrapper">
       <canvas id="canvas" width="420" height="560" class="front"></canvas>
       <canvas id="grid" width="420" height="560" class="grid"></canvas>
@@ -17,10 +20,13 @@
     <script src="scripts/components/appearance.js"></script>
     <script src="scripts/components/position.js"></script>
     <script src="scripts/components/usercontrolled.js"></script>
+    <script src="scripts/components/enemy.js"></script>
+    <script src="scripts/components/edible.js"></script>
     <script src="scripts/components/velocity.js"></script>
     <script src="scripts/entities/entity.js"></script>
     <script src="scripts/assemblages.js"></script>
     <script src="scripts/systems/physics.js"></script>
+    <script src="scripts/systems/collisiondetection.js"></script>
     <script src="scripts/systems/render.js"></script>
     <script src="scripts/systems/userinput.js"></script>
     <script src="scripts/init.js"></script>
